added table with contact information such as placeheader for email contact, blank profile pics(real pics to be added later on) and added group names

--- a/Website/contact.html
+++ b/Website/contact.html
@@ -12,4 +12,58 @@
 	</nav>
         <h1><i>Contact Us!</i></h1>
     </body>
+</html><!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <title>Contact</title>
+    </head>
+    <body>
+        <header>
+            <nav>
+                <a href="index.html"> Home</a>
+                <a href="about.html"> About</a>
+            </nav>
+        </header>        
+        <h1><i>Contact Us!</i></h1>
+        <table>
+            <tr>
+                <td><img src="blank_pfp.png" alt="Blank Profile Pic"></td>
+                <td><a href="mailto:kcoggshall@csub.edu"> Email</a>
+            </tr>
+            <tr>
+                <td>Kristine Coggshall</td>
+            </tr>
+            <tr>
+                <td><img src="blank_pfp.png" alt="Blank Profile Pic"></td>
+                <td>Blank@csub.edu</td>
+            </tr>
+            <tr>
+                <td>Michael Etchison</td>
+            </tr>
+            <tr>
+                <td><img src="blank_pfp.png" alt="Blank Profile Pic"></td>
+                <td>Blank@csub.edu</td>
+            </tr>
+            <tr>
+                <td>Sandra Flores</td>
+            </tr>
+            <tr>
+                <td><img src="blank_pfp.png" alt="Blank Profile Pic"></td>
+                <td>Blank@csub.edu</td>
+            </tr>
+            <tr>
+                <td>Julius Ryan Flores</td>
+            </tr>
+            <tr>
+                <td><img src="blank_pfp.png" alt="Blank Profile Pic"></td>
+                <td><a href="mailto:jrojas53@csub.edu"> Email</a>
+                </td>
+            </tr>
+            <tr>
+                <td>Jesus Rojas</td>
+            </tr>
+        </table>
+    </body>
 </html>
