Added filler text for paragraph, will be changed in the future about creating mission statement that group will compose

--- a/Website/about.html
+++ b/Website/about.html
@@ -6,10 +6,25 @@
         <title>About</title>
     </head>
     <body>
-	<nav>
-		<a href="index.html"> Home</a>
-		<a href="contact.html"> Contact</a>
-	</nav>
+        <header>
+             <nav>
+                <a href="index.html"> Home</a>
+                <a href="contact.html"> Contact</a>
+            </nav>
+        </header>
         <h1><i>About Us</i></h1>
+        <p>
+            Lorem ipsum dolor sit amet, per ne aeque labitur consequat, prima interesset qui at. Eu qui fuisset sensibus constituam, 
+            falli mundi quo ei. An congue feugait assueverit est, liber aliquip utroque eam eu. An admodum vivendum deterruisset ius.
+            Eu has verterem volutpat, eu eum partem quodsi vituperatoribus. Quis quaestio te pri. Ea omnis gloriatur signiferumque vim, 
+            dico decore aperiam et vix, eam eius audire oporteat no. No audire molestiae nam, eos at omnis signiferumque. 
+            Quo nisl volumus euripidis no. Has in possit alienum maiestatis. Duis perfecto volutpat eum eu.
+            Id duo stet partem assueverit. Id sumo democritum has. An mel mazim delicata voluptatum, mel movet intellegam disputationi ad. 
+            Aliquam minimum cu eum. Mel inani possim nostrum te, at apeirian qualisque sed, eum et adipisci gubergren theophrastus.
+            Id vero aliquando vulputate pro, deserunt conceptam vix ne, ea vix probo oblique erroribus. Aliquip phaedrum qui ad. 
+            Ius tota evertitur philosophia et, solet primis fabellas in per. Putent feugait sit te.
+            Ad has dicat verterem, ut vix dicant melius, cu ignota indoctum vim. At has nulla elitr persecuti. Ius diam aliquid adversarium et, 
+            vis cetero labitur ornatus ut, an quot facilisi vim. Eum propriae hendrerit et.
+        </p>
     </body>
 </html>
