corrected overflow text to allow scroll bar, as well correct background to be entact when browser has changed size

--- a/Website/contact.html
+++ b/Website/contact.html
@@ -8,7 +8,8 @@
             body {
                 background-image: url("summer_background_gradient.jpg");
                 background-size: cover;
-                margin: 0%;
+	            background-position: center center;
+	            background-attachment: fixed;                
             }
             h1 {
                 text-align: center; 
@@ -57,6 +58,7 @@
                 width: 100%;
                 background-color: white;
                 opacity: 50%;
+                overflow: auto;
             }
             .indiv {
                 margin: auto;
@@ -64,7 +66,6 @@
                 text-align: center;
                 font-family: Tahoma, sans-serif;
                 font-size: 40px;
-                overflow: hidden;
                 text-shadow: 2px 2px 5px ghostwhite;                
             }
             .footer {
