each of these pages, I linked the external style sheet and removed the existing style declarations. Moving foward, the ext. style sheet will be used for the website

--- a/Website/contact.html
+++ b/Website/contact.html
@@ -4,75 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Contact</title>
-        <style>
-            body {
-                background-image: url("summer_background_gradient.jpg");
-                background-size: cover;
-	            background-position: center center;
-	            background-attachment: fixed;                
-            }
-            h1 {
-                text-align: center; 
-                font-family: Tahoma, sans-serif; 
-                color: white; 
-                font-size: 80px; 
-                text-shadow: 2px 2px 5px gray; 
-                margin: 0%;
-            }
-            h2 {
-                text-align: center; 
-                font-family: Tahoma, sans-serif; 
-                color: black; 
-                text-shadow: 2px 2px 5px wheat;
-                font-size: 50px; 
-                margin: 0%;
-            }
-            ul  {
-                list-style-type: none;
-                margin: auto;
-                border: 0;
-                padding: 0;
-                top: 0;
-                overflow: hidden;
-                font-family: Tahoma, sans-serif;
-            }
-            li {
-                float: left;
-                margin-left: 20px;
-            }
-            li a {
-                display: block;
-                color: lightgray;
-                text-align: center;
-                padding: 15px;
-                font-size: 20px;
-            }
-            li a:hover:not(.active) {
-                color: white;
-            }
-            .active {
-                color: white;
-            }
-            .page {
-                height: 650px;
-                width: 100%;
-                background-color: white;
-                opacity: 50%;
-                overflow: auto;
-            }
-            .indiv {
-                margin: auto;
-                padding-top: 60px;
-                text-align: center;
-                font-family: Tahoma, sans-serif;
-                font-size: 40px;
-                text-shadow: 2px 2px 5px ghostwhite;                
-            }
-            .footer {
-                overflow: hidden;
-                text-align: right;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
@@ -83,7 +15,7 @@
             </ul>
         </header>        
         <h1>Meet Our Team</h1>
-        <div class="page">
+        <div class="page_alt">
             <h2>Our Members</h2>
             <div class="indiv">
                 Kristine Coggshall | Full Stack Developer      
