--- a/Website/index.html
+++ b/Website/index.html
@@ -4,100 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Home</title>
-        <style>
-            body {
-                background-image: url("summer_background_gradient.jpg");
-                background-size: cover;
-	            background-position: center center;
-	            background-attachment: fixed;                
-            }
-            h1 {
-                text-align: center; 
-                font-family: Tahoma, sans-serif; 
-                color: white; 
-                font-size: 80px; 
-                text-shadow: 2px 2px 5px gray; 
-                margin: 0%;
-            }
-            ul  {
-                list-style-type: none;
-                margin: auto;
-                border: 0;
-                padding: 0;
-                top: 0;
-                overflow: hidden;
-                font-family: Tahoma, sans-serif;
-            }
-            li {
-                float: left;
-                margin-left: 20px;
-            }
-            li a {
-                display: block;
-                color: lightgray;
-                text-align: center;
-                padding: 15px;
-                font-size: 20px;
-            }
-            li a:hover:not(.active) {
-                color: white;
-            }
-            .active {
-                color: white;
-            }
-            .page {
-                width: 900px;
-                margin: auto;
-            }
-            .content {
-                float: left;
-                height: 650px;
-                width: 500px;
-                background-color: white;
-            }
-            .col {
-                float: left;
-                width: 50%;
-                margin-top: 20px;
-            }
-            .row::after {
-                content: "";
-                display: table;
-                clear: both;
-            }
-            .c1 {
-                text-align: center;
-                margin-top: 20px;
-                padding-right: 30%;
-            }
-            .horizontal-bar {
-                margin-top: 0px;
-                height: 10px;
-                width: 100%;
-                background-color: black;
-            }
-            .button {
-                background-color: dodgerblue;
-                border: none;
-                color: white;
-                padding: 20px;
-                text-align: center;
-                text-decoration: underline;
-                font-size: 25px;
-                font-family: Tahoma, sans-serif;
-                display: inline-block;
-                margin: 4px 2px;
-                margin-left: 40%;
-                cursor: pointer;
-                width: 350px;
-                height: 70px;
-            }
-            .button1 {border-radius: 15px;}
-            .footer {
-                overflow: hidden;
-                text-align: right;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
