--- a/Website/contact.html
+++ b/Website/contact.html
@@ -18,19 +18,19 @@
         <div class="page_alt">
             <h2>Our Members</h2>
             <div class="indiv">
-                Kristine Coggshall | Full Stack Developer      
+                Kristine Coggshall | Back-End Developer
             </div>
             <div class="indiv">
-                Michael Etchison | Full Stack Developer 
+                Michael Etchison | Back-End Developer 
             </div>
             <div class="indiv">
-                Julius Ryan Flores | Full Stack Developer
+                Julius Ryan Flores | Back-End Developer
             </div>
             <div class="indiv">
-                Sandra Mateiro | Full Stack Developer
+                Sandra Mateiro | Front-End Developer
             </div>
             <div class="indiv">
-                Jesus Rojas | Full Stack Developer
+                Jesus Rojas | Front-End Developer
             </div>
         </div>
         <div class ="footer">
