updating the footer links and learn more link to be directed to login.php page

--- a/Website/index.html
+++ b/Website/index.html
@@ -35,13 +35,13 @@
         <div class="horizontal-bar">
         </div>
         <button class="button button1">
-            <a style="text-decoration: none" href="account.php">
+            <a style="text-decoration: none" href="login.php">
                 Click here to learn more!
             </a>
         </button> 
         <div class ="footer">
             <a class = "active" style="text-decoration: none" href="index.html">Home</a>
-            <a style="text-decoration: none" href="account.php"> Account</a></li>
+            <a style="text-decoration: none" href="demo.php"> DEMO PAGE</a></li>
             <a style="text-decoration: none" href="about.html"> About</a></li>
             <a style="text-decoration: none" href="contact.html"> Contact</a></li>
         </div>
