updating the style of the website. Completely changed the index.html page style to include a new image and nav bar that will be accessed throughout the site. As well, updated the look and text in register.php to include disclaimer for user

--- a/Website/about.html
+++ b/Website/about.html
@@ -12,6 +12,7 @@
                 <li><a style="text-decoration: none" href="index.html"> Home</a></li>
                 <li><a class = "active" style="text-decoration: none" href="about.html"> About</a></li>
                 <li><a style="text-decoration: none" href="contact.html">Contact</a></li>
+                <li style="float:right"><a class="active" href="login.php">Login</a></li>
             </ul>
         </header>        
         <h1>About Us</h1>
@@ -33,11 +34,6 @@
                 <br>
                 We hope our solutions feel like a helping hand in a time of need.
             </div>
-        </div>
-        <div class ="footer">
-            <a class = "active" style="text-decoration: none" href="about.html">About</a>
-            <a style="text-decoration: none" href="index.html"> Home</a></li>
-            <a style="text-decoration: none" href="contact.html"> Contact</a></li>
         </div>
     </body>
 </html>
