--- a/Website/contact.html
+++ b/Website/contact.html
@@ -12,6 +12,7 @@
                 <li><a style="text-decoration: none" href="index.html"> Home</a></li>
                 <li><a style="text-decoration: none" href="about.html"> About</a></li>
                 <li><a class = "active" style="text-decoration: none" href="contact.html">Contact</a></li>
+                <li style="float:right"><a class="active" href="login.php">Login</a></li>
             </ul>
         </header>        
         <h1>Meet Our Team</h1>
@@ -32,11 +33,6 @@
             <div class="indiv">
                 Jesus Rojas | Front-End Developer
             </div>
-        </div>
-        <div class ="footer">
-            <a class = "active" style="text-decoration: none" href="contact.html">Contact</a>
-            <a style="text-decoration: none" href="index.html"> Home</a></li>
-            <a style="text-decoration: none" href="about.html"> About</a></li>
         </div>
     </body>
 </html>
