--- a/Website/index.html
+++ b/Website/index.html
@@ -12,38 +12,14 @@
                 <li><a class = "active" style="text-decoration: none"  href="index.html"> Home</a></li>
                 <li><a style="text-decoration: none" href="about.html"> About</a></li>
                 <li><a style="text-decoration: none" href="contact.html">Contact</a></li>
+                <li style="float:right"><a class="active" href="login.php">Login</a></li>
             </ul>
-        </header>        
-        <h1>ReadyMedi</h1>
-        <div class="row" style="overflow: hidden;">
-            <div class="col">
-                <img src="woman_smiling_at_comp.jpg" alt="woman_smiling_at_comp" style="height: 340px;max-width: 527px; float: right;">
-            </div>
-            <div class="col" style="background-color: #ffffffff;opacity: 70%;height: 340px; max-width: 40%;">
-                <h2 style="text-decoration: underline;text-align: center;font-family: Tahoma, sans-serif;">Welcome</h2>                
-                <p style="font-size: 25px;line-height: 45px;font-family: Tahoma, sans-serif;text-align: center;">
-                    • Not sure on how you are feeling today?
-                <br>
-                    • Are you having symptoms that you are unsure of?
-                <br>
-                    • Need fast health answers?
-                <br>
-                    Use our Health Scanner now!
-                </p>
-            </div>
-        </div>
-        <div class="horizontal-bar">
-        </div>
-        <button class="button button1">
-            <a style="text-decoration: none" href="login.php">
-                Click here to learn more!
-            </a>
-        </button> 
-        <div class ="footer">
-            <a class = "active" style="text-decoration: none" href="index.html">Home</a>
-            <a style="text-decoration: none" href="demo.php"> DEMO PAGE</a></li>
-            <a style="text-decoration: none" href="about.html"> About</a></li>
-            <a style="text-decoration: none" href="contact.html"> Contact</a></li>
-        </div>
+        </header>   
+        <div class="banner">
+            <h2 style="text-align: center;font-family: Tahoma, sans-serif; color: gold; font-size: 60px; outline: 10px; 
+            text-shadow: -1px -1px 0 #000, 1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;">Health Answers</h2>
+            <h2 style="text-align: center;font-family: Tahoma, sans-serif; color: white; font-size: 30px; outline: 10px; 
+            text-shadow: -1px -1px 0 #000, 1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;">When you need them.</h2>
+        </div>        
     </body>
 </html>
