1-by-1 Quiz + Homepage Style Edits
Quiz now displays questions one by one.
Made some edits to index.html and style.cc for some changes, these were mostly experimentation and the aesthetic changes don't need to be kept.

--- a/Website/index.html
+++ b/Website/index.html
@@ -16,10 +16,13 @@
             </ul>
         </header>   
         <div class="banner">
-            <h2 style="text-align: center;font-family: Tahoma, sans-serif; color: gold; font-size: 60px; outline: 10px; 
-            text-shadow: -1px -1px 0 #000, 1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;">Health Answers</h2>
-            <h2 style="text-align: center;font-family: Tahoma, sans-serif; color: white; font-size: 30px; outline: 10px; 
-            text-shadow: -1px -1px 0 #000, 1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;">When you need them.</h2>
-        </div>        
+            <h2 style="text-align: left;font-family: Tahoma, sans-serif; color: gold; font-size: 60px; outline: 10px; 
+            text-shadow: -1px -1px 0 #000, 1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000; margin-left: 1in;">   Health Answers</h2>
+            <h2 style="text-align: left;font-family: Tahoma, sans-serif; color: white; font-size: 30px; outline: 10px; 
+            text-shadow: -1px -1px 0 #000, 1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000; margin-left: 1in;">   When you need them.</h2>
+
+            <a href="currentQuiz.php" class="redirect-button">Take our Health Scan</a>
+        </div>     
+        
     </body>
 </html>
